[package]
name = "bonnyledger-tp"
version = "0.1.0"
authors = ["anjankow"]
# build script executed just before building the package
build = "build.rs"

[lib]
name = "bonny_ledger"
path = "src/lib.rs"

[[bin]]
name = "app"
path = "src/main.rs"

[dependencies]
sawtooth-sdk = "0.5"
rust-crypto = "0.2"
rustc-serialize = "0.3"
clap = "2"
protobuf = "2.23"
log = "0.4"
log4rs = "0.8"
reqwest = "0.11.16"
error-chain = "0.12.4"
futures = "0.3"
url = "2.3.1"
ecdsa = "0.16.2"
k256 = "0.13.0"
rand = "0.8.4"
sawtooth = "0.7.3"

[build-dependencies]
protoc-rust = "2.0"
glob = "0.3"
