[package]
name = "bonnyledger_tp"
version = "0.1.0"
authors = ["anjankow"]
# build script executed just before building the package
build = "build.rs"
edition = "2021"

[lib]
name = "bonnyledger_tp"
path = "src/lib.rs"

[[bin]]
name = "app"
path = "src/main.rs"

[dependencies]
sawtooth-sdk = "0.5"
rust-crypto = "0.2"
rustc-serialize = "0.3"
clap = "2"
protobuf = "2.23"
log = "0.4"
log4rs = "0.8"
futures = "0.3"
rand = "0.8.4"
sawtooth = "0.7.3"
reqwest = { version = "0.11"}
tokio = {version="1.27.0",  features = ["rt", "macros"]}
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
bytes = "1.4.0"
strum_macros = "0.24.3"
base64 = "0.21.0"

[build-dependencies]
protoc-rust = "2.0"
glob = "0.3"
