[package]
name = "es_mirror_blkchn"
version = "0.1.0"
edition = "2021"

# [lib]
# name = "es_mirror_blkchn"
# path = "src/lib.rs"


[[bin]]
name = "app"
path = "src/main.rs"

[dependencies]
sawtooth = "0.7.3"
sawtooth-sdk = "0.5"
protobuf = "2.23"
futures = "0.3"
url = "2.3.1"
reqwest = { version = "0.11"}
tokio = {version="1.27.0",  features = ["rt", "macros"]}
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
base64 = "0.21.0"
zmq = "0.9.0"
config = "0.13.3"
