[package]
name = "ledger-tp"
version = "0.1.0"
authors = ["anjankow"]
# build script executed just before building the package
build = "build.rs"

[lib]
name = "simple_ledger"
path = "src/lib.rs"

[[bin]]
name = "app"
path = "src/main.rs"

[dependencies]
sawtooth-sdk = "0.5"
rust-crypto = "0.2"
rustc-serialize = "0.3"
clap = "2"
protobuf = "2.23"
log = "0.4"
log4rs = "0.8"

[build-dependencies]
protoc-rust = "2.0"
glob = "0.3"
